test/files/neg/t3854.check
t3854.scala:1: error: class Bar needs to be abstract. Missing implementation for:
  def foo[G[_]](implicit n: N[G,F]): X[F] // inherited from trait Foo
(Note that N[G,F] does not match M[G])
class Bar[F[_]] extends Foo[F] {
      ^
one error found
